--- a/code/cs517prj/stack.yaml
+++ b/code/cs517prj/stack.yaml
@@ -16,8 +16,8 @@
 # a snapshot provided as a file might change, whereas a url resource does not.
 #
 # resolver: ./custom-snapshot.yaml
-# resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-13.27
+# resolver: https://example.com/snapshots/2018-01-01.yaml resolver: lts-13.27
+resolver: lts-15.3
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -41,7 +41,7 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps: [HDBC-2.4.0.3, sbv-8.5]
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
